--- a/hello/index.html
+++ b/hello/index.html
@@ -11,5 +11,6 @@
 <body>
     <h1 class="box-one">One</h1>
     <h1 class="box-two">Two</h1>
+    <h1 class="box-three">Three</h1>
 </body>
 </html>
