--- a/Lab0/index.html
+++ b/Lab0/index.html
@@ -11,6 +11,6 @@
 <body>
     <h1 class="box-one">One</h1>
     <h1 class="box-two">Two</h1>
-    <h1 class="box-three">Three</h1>
+    <h1 class="box-three">C20309073 John Ranola</h1>
 </body>
 </html>
